@@ -1,4 +1,4 @@
-* Sat Feb 18 2006 Brendan O'Dea <bod@optus.net> 2.1.16
+* Thu Feb 23 2006 Brendan O'Dea <bod@optus.net> 2.1.16
 - Send configured magic-no in LCP EchoReq when LCP is opened.
 - Correct addition of single IP to pool (Jonathan Yarden).
 - Ensure session changes from LCP ConfigReq/ConfigNak are sent to cluster.
@@ -6,6 +6,7 @@
 - Avoid endless loop in processipcp, processipv6cp.
 - Additional length checks in processlcp.
 - Allow peer to request a new magic-number, or to disable magic-numbers.
+- Decrease ip_conntrack_tcp_timeout_established to 5hrs (table filling).
 
 * Mon Dec 19 2005 Brendan O'Dea <bod@optus.net> 2.1.15
 - Drop backtrace.
